--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -47,11 +47,8 @@
                         </div>
                         <span>Timing schedule</span>
                         <h4 class="mb-3">Working Hours</h4>
-                        <ul class="w-hours list-unstyled">
-                            <li class="d-flex justify-content-between">Sun - Wed : <span>8:00 - 17:00</span></li>
-                            <li class="d-flex justify-content-between">Thu - Fri : <span>9:00 - 17:00</span></li>
-                            <li class="d-flex justify-content-between">Sat - sun : <span>10:00 - 17:00</span></li>
-                        </ul>
+                        <h4>24 Hours a Day</h4>
+                        <h4>7 days a Week</h4>
                     </div>
 
                     <div class="feature-item mb-5 mb-lg-0">
