--- a/project/templates/pages/utils/contact.html
+++ b/project/templates/pages/utils/contact.html
@@ -66,14 +66,17 @@
         </div>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <form id="contact-form" class="contact__form " method="post" action="mail.php">
-                    <!-- form message -->
+                <form action="{% url 'contact' %}" method="post">
+                    {% csrf_token %}
+
                     <div class="row">
+                        {% for message in messages %}
                         <div class="col-12">
-                            <div class="alert alert-success contact__msg" style="display: none" role="alert">
+                            <div class="alert alert-success contact__msg" role="alert">
                                 Your message was sent successfully.
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
 
                     <div class="row">
@@ -90,16 +93,10 @@
                                        placeholder="Your Email Address">
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-12">
                             <div class="form-group">
                                 <input name="subject" id="subject" type="text" class="form-control"
                                        placeholder="Your Query Topic">
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <input name="phone" id="phone" type="text" class="form-control"
-                                       placeholder="Your Phone Number">
                             </div>
                         </div>
                     </div>
@@ -111,7 +108,7 @@
 
                     <div class="text-center">
                         <input class="btn btn-main btn-round-full" name="submit" type="submit"
-                               value="Send Messege"></input>
+                               value="Send Message"/>
                     </div>
                 </form>
             </div>
