--- a/project/templates/pages/user-control/edit-profile.html
+++ b/project/templates/pages/user-control/edit-profile.html
@@ -62,7 +62,7 @@
         <div class="col-lg-8 col-md-6">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <form class="p-3 border rounded" method="post">
+                    <form class="p-3 border rounded" enctype="multipart/form-data"  method="post">
                         <h3 class="text-center mb-3">Update Profile</h3>
                         {% csrf_token %}
 
